<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Lernplattform"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Prüfungen erstellen und verwalten"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="32sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="35dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            android:layout_marginTop="32dp"
            android:minHeight="48dp" />

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
            android:layout_marginTop="16dp"
            android:minHeight="48dp" />

    <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:text="@string/sign_in_button_label"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="5dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            android:layout_marginTop="16dp" />

    <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:text="@string/register_button_label"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="38dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/error_text_color"
            android:textSize="32sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.7"
            android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
